added routes and list handlebar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,12 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Registry</title>
   <link rel="stylesheet" href="/css/jass.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </head>
 
-<body>
+{{!-- <body>
+  <nav class="navbar bg-primary" data-bs-theme="dark">
+  <div class="container">
+    <a href="/" class = "navbar-brand">NextQuest</a>
+  </div>
+</nav> --}}
+
   <header class="display-flex justify-space-between align-center p-2">
     <h1>
-      User Registry
+      What's Your NextQuest?
     </h1>
     {{#if logged_in}}
     <nav>
