--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,10 @@
-<h1>Welcome to nextQuest!</h1>
-
+<h1>Welcome {{ name }} </h1>
+<h2>What Would You Like To Do?</h2>
+<ul>
+  <a href="#"><li>View Account</li></a>
+  <a href="#"><li>Make a New List</li></a>
+  <a href="#"><li>View Existing Lists</li></a>
+</ul>
 
 {{!-- {{#each users as |user| }}
 <div class="row align-center mb-5">
