--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,11 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>nextQuest</title>
+  <link rel="stylesheet" href="/css/jass.css">
 </head>
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
     <h1>
+      nextQuest for Your Next Quest
+    </h1>
+    {{#if logged_in}}
+    <nav>
+      <button class="btn" id="logout">logout</button>
+    </nav>
     {{/if}}
   </header>
   <main class="container container-fluid mt-5">
@@ -23,3 +30,5 @@
   <script src="/js/logout.js"></script>
   {{/if}}
 </body>
+
+</html>
