--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,6 +2,6 @@
 <h2>What Would You Like To Do?</h2>
 <ul>
   <a href="#"><li>View Account</li></a>
-  <a href="#"><li>Make a New List</li></a>
+  <a href="/new-list"><li>Make a New List</li></a>
   <a href="#"><li>View Existing Lists</li></a>
 </ul>
