--- a/views/newList.handlebars
+++ b/views/newList.handlebars
@@ -11,7 +11,7 @@
 
   <div class="mb-3">
     <label for="difficulty" class="form-label">Difficulty: </label>
-    <select class="form-select" name="difficulty">
+    <select class="form-select" id="difficulty" name="difficulty">
 
       <option value="easy">Easy</option>
       <option value="medium">Medium</option>
@@ -26,7 +26,7 @@
 
 
   <div class="form-check mb-3">
-  <input class="form-check-input" type="checkbox" id="flexCheckDefault" name="is_priority">
+  <input class="form-check-input" type="checkbox" id="is_priority" name="is_priority">
   <label class="form-check-label" for="is_priority">
     Is this important?
   </label>
@@ -35,3 +35,5 @@
 
   <button type="submit" class="btn btn-success">Submit</button>
 </form>
+
+<script src="/js/listForm.js"></script>
