removed unneccessary package

--- a/views/gameList.handlebars
+++ b/views/gameList.handlebars
@@ -1,4 +1,4 @@
-<div class="list-container">
+{{!-- <div class="list-container">
     <div class="card-header col-md-10">
         <h2>
             {{ game }}
@@ -13,6 +13,6 @@
         <li> {{ date_created }} </li>
         </ul>
     </div>
-</div>
+</div> --}}
 
 
