background imgs and css files

--- a/views/newList.handlebars
+++ b/views/newList.handlebars
@@ -3,9 +3,7 @@
     <label for="game" class="form-label">Game: </label>
     <input type="text" class="form-control" id="game" name="game">
   </div>
-<div>
-  <img src="/images/newListBackground.png" alt="castle">
-</div>
+
   <div class="mb-3">
     <label for="genre" class="form-label">Genre: </label>
     <input type="text" class="form-control" id="genre" name="genre">
@@ -35,7 +33,7 @@
 </div>
 
 
-  <button type="submit" class="btn btn-success">Submit</button>
+  <button type="submit" class="btn btn-success">Your nextQuest!</button>
 </form>
 
 <script src="/js/listForm.js"></script>
