--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
   {{!-- bootstrap css --}}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   {{!-- custom css --}}
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/{{style}}">
   {{!-- bootstrap js --}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </head>
@@ -20,11 +20,11 @@
 <body>
   <header class="display-flex justify-space-between align-center p-2">
     <h1>
-      nextQuest for Your Next Quest
+      nextQuest: May Your Next be Best
     </h1>
     {{#if logged_in}}
     <nav>
-      <button class="btn" id="logout">logout</button>
+      <button class="btn" id="logout">Logout</button>
     </nav>
     {{/if}}
   </header>
