--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,20 @@
-<h2>Login</h2>
 
-<form class="form login-form">
-  <div class="form-group">
-    <label for="email-login">Email:</label>
-    <input class="form-input" type="text" id="email-login" />
-  </div>
-  <div class="form-group">
-    <label for="password-login">Password:</label>
-    <input class="form-input" type="password" id="password-login" />
-  </div>
-  <div class="form-group">
-    <button class="btn btn-success" type="submit">Login</button>
-  </div>
-</form>
+
+<div class="container square-box d-flex justify-content-center align-items-center">
+    <h2>Login</h2>
+  <form class="form login-form">
+    <div class="form-group text-center">
+      <label for="email-login">Email:</label>
+      <input class="form-input" type="text" id="email-login" />
+    </div>
+    <div class="form-group text-center">
+      <label for="password-login">Password:</label>
+      <input class="form-input" type="password" id="password-login" />
+    </div>
+    <div class="form-group text-center">
+      <button class="btn btn-success" type="submit">Login</button>
+    </div>
+  </form>
+</div>
 
 <script src="/js/login.js"></script>
