--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
     <div class="form-group text-center">
       <button class="btn btn-success" type="submit">Login</button>
     </div>
-    <p>No account? </p><a href="/signup">Sign up here.</a>
+    <p class="mt-3">No account? <a href="/signup">Sign up here.</a></p>
   </form>
 </div>
 
