sign up is working

--- a/views/userProfile.handlebars
+++ b/views/userProfile.handlebars
@@ -1,19 +1,21 @@
 <section>
-  <div class="row">
-    <div class="col-lg-4">
-      <div class="card mb-4">
-        <div class="card-body text-center">
-          <img
-            src="https://images.pexels.com/photos/7229896/pexels-photo-7229896.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-            alt="avatar" class="img-fluid">
-          <h5 class="my-3">Lancelot Roundtable</h5>
-          <p class="text-muted mb-4">England, Middle Ages</p>
-          <div class="d-flex justify-content-center mb-2">
+<div class="row">
+      <div class="col-lg-4">
+        <div class="card mb-4">
+          <div class="card-body text-center">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+              class="rounded-circle img-fluid" style="width: 150px;">
+            <h5 class="my-3">John Smith</h5>
+            <p class="text-muted mb-1">Full Stack Developer</p>
+            <p class="text-muted mb-4">Bay Area, San Francisco, CA</p>
+            <div class="d-flex justify-content-center mb-2">
+              <button type="button" class="btn btn-primary">Follow</button>
+              <button type="button" class="btn btn-outline-primary ms-1">Message</button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col-lg-8">
+ <div class="col-lg-8">
         <div class="card mb-4">
           <div class="card-body">
             <div class="row">
@@ -30,29 +32,21 @@
                 <p class="mb-0">Email</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-2">example@example.com</p>
+                <p class="text-muted mb-0">example@example.com</p>
               </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Twitch</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-1">Example123</p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-lg-4">
-                  <div class="card mb-4">
-                    <div class="card-body text-center">
-                      <p>Quest Lists</p>
-                      <div class="d-flex justify-content-center mb-2">
-                      </div>
-                    </div>
-                  </div>
+            </div>
+            <hr>      
 
 
+            <div class="row">
+          <div class="col-md-6">
+            <div class="card mb-4 mb-md-0">
+              <div class="card-body">
+                <p class="mb-4"><span class="text-primary font-italic me-1">Quest List</span> Project Status
+                </p>
+                <p class="mb-1" style="font-size: .77rem;">Web Design</p>
+                <div class="progress rounded" style="height: 5px;">
+                  <div class="progress-bar" role="progressbar" style="width: 80%"></div>
+                </div> 
 </section>
-
 <script src="/js/profile.js"></script>
