--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,17 @@
 
 
-<div class="container square-box d-flex justify-content-center align-items-center">
+<div class="container square-box text-center">
     <h2>Login</h2>
   <form class="form login-form">
-    <div class="form-group text-center">
+    <div class="form-group">
       <label for="email-login">Email:</label>
       <input class="form-input" type="text" id="email-login" />
     </div>
-    <div class="form-group text-center">
+    <div class="form-group">
       <label for="password-login">Password:</label>
       <input class="form-input" type="password" id="password-login" />
     </div>
-    <div class="form-group text-center">
+    <div class="form-group text-center mt-2">
       <button class="btn btn-success" type="submit">Login</button>
     </div>
     <p class="mt-3">No account? <a href="/signup">Sign up here.</a></p>
