--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,15 +14,14 @@
  {{!-- bootstrap js --}}
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 {{!-- custom css --}}
-<link rel="stylesheet" href="/css/homepage.css" >
-
+<link rel="stylesheet" href="css/{{style}}" >
 
 
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
+  <header class="display-flex justify-space-between align-center p-5">
+    <h1 class="text-danger">
       nextQuest: May Your Next be Best
     </h1>
     {{#if logged_in}}
