--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -17,9 +17,9 @@
     </form>
   </div>
   <div class="col-md-6"> --}}
-    <h2>Signup</h2>
+    <h2 class="text-danger">Signup</h2>
 
-    <form class="form signup-form">
+    <form class="form signup-form text-danger lead">
       <div class="form-group">
         <label for="name-signup">name:</label>
         <input class="form-input" type="text" id="name-signup" name="name-signup" />
