--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
  {{!-- bootstrap js --}}
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 {{!-- custom css --}}
-<link rel="stylesheet" href="/css/homepage.css" >
+<link rel="stylesheet" href="/css/{{#if style}}{{style}}{{else}}homePage{{/if}}.css" >
 
 
 
@@ -25,7 +25,7 @@
     <h1>
       nextQuest: May Your Next be Best
     </h1>
-    {{#if logged_in}}
+    {{#if user}}
     <nav>
       <button class="btn" id="logout">Logout</button>
     </nav>
@@ -38,7 +38,7 @@
       
   </footer>
 
-  {{#if logged_in}}
+  {{#if user}}
   <script src="/js/logout.js"></script>
   {{/if}}
 </body>
