--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -33,7 +33,14 @@
         <input class="form-input" type="password" id="password-signup" name="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-success" type="submit">Create Account</button>
+        <button
+          class="btn btn-success"
+          style="
+            background-color: purple;
+            color: white;
+            font-family: 'MedievalSharp', cursive;"
+          type="submit"
+        >Begin the Adventure</button>
       </div>
     </form>
   </div>
