--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -7,5 +7,6 @@ body {
     background-size: cover; /* Adjust to your preference */
     background-repeat: no-repeat;
     background-attachment: fixed; /* This keeps the background fixed while scrolling */
+    font-family: 'Figtree', sans-serif;
 }
 
