--- a/public/css/login.css
+++ b/public/css/login.css
@@ -9,6 +9,7 @@ body {
     background-size: cover; /* Adjust to your preference */
     background-repeat: no-repeat;
     background-attachment: fixed; /* This keeps the background fixed while scrolling */
+    font-family: 'Figtree', sans-serif;
 }
 
 .square-box {
