--- a/public/css/newList.css
+++ b/public/css/newList.css
@@ -8,4 +8,5 @@ body {
     background-size: cover; /* Adjust to your preference */
     background-repeat: no-repeat;
     background-attachment: fixed; /* This keeps the background fixed while scrolling */
+    font-family: 'Figtree', sans-serif;
 }
