--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,15 +9,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Figtree&display=swap" rel="stylesheet">
   {{!-- bootstrap css --}}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
- {{!-- bootstrap js --}}
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-{{!-- custom css --}}
-<link rel="stylesheet" href="/css/{{#if style}}{{style}}{{else}}homePage{{/if}}.css" >
-
-
-
+  {{!-- bootstrap js --}}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  {{!-- custom css --}}
+  <link rel="stylesheet" href="/css/{{#if style}}{{style}}{{else}}homePage{{/if}}.css" >
 </head>
 
 <body>
@@ -27,7 +25,7 @@
     </h1>
     {{#if user}}
     <nav>
-      <button class="btn" id="logout">Logout</button>
+      <button class="btn btn-info" id="logout">Logout</button>
     </nav>
     {{/if}}
   </header>
