--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,32 +10,40 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
   {{!-- bootstrap css --}}
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
- {{!-- bootstrap js --}}
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-{{!-- custom css --}}
-<link rel="stylesheet" href="/css/homepage.css" >
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  {{!-- bootstrap js --}}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  {{!-- custom css --}}
+  <link rel="stylesheet" href="/css/homepage.css">
 
 
 
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      nextQuest: May Your Next be Best
-    </h1>
-    {{#if logged_in}}
-    <nav>
-      <button class="btn" id="logout">Logout</button>
-    </nav>
-    {{/if}}
-  </header>
+  <nav class="navbar bg-success">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">nextQuest: May Your Next Be Your Best</a>
+      <a href="/sign-up">
+        <button class="btn">
+          Sign Up
+        </button>
+        {{#if logged_in}}
+        <button class="btn" id="logout">Logout</button>
+      </a>
+    </div>
+  </nav>
+
+
+  {{/if}}
   <main class="container container-fluid mt-5">
     {{{ body }}}
   </main>
   <footer>
-      
+
   </footer>
 
   {{#if logged_in}}
