fixed cannot get sign up

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,4 @@
 
-
 <div class="container square-box text-center">
     <h2>Login</h2>
   <form class="form login-form">
@@ -14,7 +13,7 @@
     <div class="form-group text-center mt-2">
       <button class="btn btn-success" type="submit">Login</button>
     </div>
-    <p class="mt-3">No account? <a href="/signup">Sign up here.</a></p>
+    <p class="mt-3">No account? <a href="/sign-up">Sign up here.</a></p>
   </form>
 </div>
 
