--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -1,6 +1,10 @@
+
+
 h1, h2, h3, h4, h5, h6 {
     font-family: 'MedievalSharp', cursive;
     color: purple;
+    text-decoration: none;
+    
 }
 body {
     background-image: url('../images/underwater.jpg');
@@ -8,5 +12,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed; /* This keeps the background fixed while scrolling */
     font-family: 'Figtree', sans-serif;
+    color: aliceblue;
 }
 
