--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,17 +18,14 @@
   <link rel="stylesheet" href="/css/{{#if style}}{{style}}{{else}}homePage{{/if}}.css" >
 </head>
 
-<body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      nextQuest: May Your Next be Best
-    </h1>
+<body>   
+  <nav class="display-flex justify-space-between align-center p-2">
+      <a href="/"><h1>nextQuest: May Your Next be Best
+    </h1></a>
     {{#if user}}
-    <nav>
       <button class="btn btn-info" id="logout">Logout</button>
-    </nav>
     {{/if}}
-  </header>
+  </nav>
   <main class="container container-fluid mt-5">
     {{{ body }}}
   </main>
