--- a/views/createProfile.handlebars
+++ b/views/createProfile.handlebars
@@ -1,19 +1,23 @@
 <form>
-  <div class="mb-3">
-    <label for="userName" class="form-label">User Name: </label>
-    <input type="text" class="form-control" id="userName" name="userName">
+    <div class="mb-3">
+        <label for="userName" class="form-label">User Name: </label>
+        <input type="text" class="form-control" id="userName" name="userName">
     </div>
 
 
- <div class="mb-3">
-    <label for="location" class="form-label">Location: </label>
-    <input type="text" class="form-control" id="location" name="location">
+    <div class="mb-3">
+        <label for="location" class="form-label">Location: </label>
+        <input type="text" class="form-control" id="location" name="location">
     </div>
 
 
- <div class="mb-3">
-  <label for="aboutMe" class="form-label">About Me: </label>
-  <textarea class="form-control" id="aboutMe" name="aboutMe" rows="3"></textarea>
-</div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="mb-3">
+        <label for="aboutMe" class="form-label">About Me: </label>
+        <textarea class="form-control" id="aboutMe" name="aboutMe" rows="3"></textarea>
+    </div>
+
+
+    <button type="submit" class="btn btn-success">Submit</button>
 </form>
+
+<script src="/js/profile.js"></script>
