--- a/views/userProfile.handlebars
+++ b/views/userProfile.handlebars
@@ -1,13 +1,29 @@
- <div class="row">
-      <div class="col-lg-4">
-        <div class="card mb-4">
-          <div class="card-body text-center">
-            <img src="https://images.pexels.com/photos/350784/pexels-photo-350784.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="avatar"
-              class="rounded-circle img-fluid" style="width: 150px;">
-            <h5 class="my-3"> User Name: {{ name }}</h5>
-            <p class="text-muted mb-1">About Me: {{ bio }}</p>
-             <p class="text-muted mb-1">E-mail: {{ email }}</p>
-            <p class="text-muted mb-4">Location: {{ location }}</p>
-            <p class="text-muted mb-4">Twitch: {{ twitch }}</p>
-          </div>
-        </div>
+<div class="row">
+  <div class="col-lg-4">
+    <div class="card mb-4">
+      <div class="card-body text-center">
+        <img src="https://images.pexels.com/photos/350784/pexels-photo-350784.jpeg?auto=compress&cs=tinysrgb&w=1600"
+          alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
+        <h5 class="my-3"> User Name: {{ user.name }}</h5>
+        <p class="text-muted mb-1">About Me: {{ user.bio }}</p>
+        <p class="text-muted mb-1">E-mail: {{ user.email }}</p>
+        <p class="text-muted mb-4">Location: {{ user.location }}</p>
+        <p class="text-muted mb-4">Twitch: {{ user.twitch }}</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-8">
+    {{#each user.Game_Lists as |game|}}
+<div class="card mb-4">
+      <div class="card-body text-center">
+        <h5 class="my-3"> Title: {{ game.game }}</h5>
+        <p class="text-muted mb-1">Genre: {{ game.genre }}</p>
+        <p class="text-muted mb-1">Difficulty: {{ game.difficulty }}</p>
+        <p class="text-muted mb-4">Length: {{ game.length }}</p>
+        <p class="text-muted mb-4">Priority: {{ game.is_priority }}</p>
+      </div>
+    </div>
+    {{/each}}
+  </div>
+</div>
