--- a/views/userProfile.handlebars
+++ b/views/userProfile.handlebars
@@ -17,7 +17,7 @@
     {{#each user.Game_Lists as |game|}}
 <div class="card mb-4">
       <div class="card-body text-center">
-        <h5 class="my-3"> Title: {{ game.game }}</h5>
+        <h5 class="my-3"> <a href="/game-list/{{game.id}}">Title: {{ game.game }}</a></h5>
         <p class="text-muted mb-1">Genre: {{ game.genre }}</p>
         <p class="text-muted mb-1">Difficulty: {{ game.difficulty }}</p>
         <p class="text-muted mb-4">Length: {{ game.length }}</p>
