--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,19 +11,24 @@
   <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Figtree&display=swap" rel="stylesheet">
   {{!-- bootstrap css --}}
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   {{!-- bootstrap js --}}
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
   {{!-- custom css --}}
-  <link rel="stylesheet" href="/css/{{#if style}}{{style}}{{else}}homePage{{/if}}.css" >
+  <link rel="stylesheet" href="/css/{{#if style}}{{style}}{{else}}homePage{{/if}}.css">
 </head>
 
-<body>   
+<body>
   <nav class="display-flex justify-space-between align-center p-2">
-      <a href="/"><h1>nextQuest: May Your Next be Best
-    </h1></a>
+    <a href="/">
+      <h1 class="text-danger">nextQuest: May Your Next be Best
+      </h1>
+    </a>
     {{#if user}}
-      <button class="btn btn-info" id="logout">Logout</button>
+    <button class="btn btn-info" id="logout">Logout</button>
     {{/if}}
   </nav>
   <main class="container container-fluid mt-5">
