--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 
-    <h2>Signup</h2>
+    <h2 class="text-danger">Signup</h2>
 
     <form class="form signup-form text-danger lead">
       <div class="form-group">
