styles fixed, broken link removed

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <h1>Welcome, {{ user.name }} </h1>
 <h2>What Would You Like To Do?</h2>
 <ul class="fs-5">
-  <a href="/user-profile" class="text-info"><li>View Account</li></a>
+  <a href="/user-profile" class="text-info"><li>View Account & Lists</li></a>
   <a href="/new-list" class="text-info"><li>Make a New List</li></a>
-  <a href="/game-list" class="text-info"><li>View Existing Lists</li></a>
+  
 </ul>
