--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,13 +14,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   {{!-- bootstrap js --}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  {{!-- global css --}}
+  <link rel="stylesheet" href="/css/global.css">
   {{!-- custom css --}}
   <link rel="stylesheet" href="/css/{{#if style}}{{style}}{{else}}homePage{{/if}}.css" >
 </head>
 
 <body>   
   <nav class="display-flex justify-space-between align-center p-2">
-      <a href="/"><h1>nextQuest: May Your Next be Best
+      <a href="/" id="siteTitle"><h1>nextQuest: May Your Next be Best
     </h1></a>
     {{#if user}}
       <button class="btn btn-info" id="logout">Logout</button>
