--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -5,7 +5,7 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
     background-image: url('../images/castle5.jpg');
-    background-size: 1500px; /* Adjust to your preference */
+    background-size: cover; /* Adjust to your preference */
     background-repeat: no-repeat;
     background-attachment: fixed; /* This keeps the background fixed while scrolling */
 }
