--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -7,10 +7,9 @@ h1, h2, h3, h4, h5, h6 {
     
 }
 body {
-    background-image: url('../images/dragon3.jpg');
-    background-size: cover; /* Adjust to your preference */
-    background-repeat: no-repeat;
-    background-attachment: fixed; /* This keeps the background fixed while scrolling */
+    background: url('../images/dragon3.jpg') no-repeat fixed;
+    background-size: cover;
+    background-position-y: -200px;
     font-family: 'Figtree', sans-serif;
     color: aliceblue;
 }
