--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -4,8 +4,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-    background-image: url('../images/castle5.jpg');
-    background-size: cover; /* Adjust to your preference */
-    background-repeat: no-repeat;
-    background-attachment: fixed; /* This keeps the background fixed while scrolling */
+    background: url('../images/castle5.jpg') no-repeat center fixed;
+    background-size: cover;
 }
