--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -2,7 +2,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'MedievalSharp', cursive;
 }
 h1 {
-    opacity: 0;
+    color: aliceblue;
 }
 body {
     background-image: url('../images/chess.jpg');
