--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,11 +1,11 @@
 h1, h2, h3, h4, h5, h6 {
     font-family: 'MedievalSharp', cursive;
-    color: aliceblue;
+    color: black;
 }
 h1 {
-    opacity: 0;
+    
 }
 body {
-    background: url('../images/chess.jpg') no-repeat center fixed;
+    background: url(https://img.freepik.com/premium-vector/retro-open-book-with-blank-pages_135176-524.jpg) no-repeat center fixed;
     background-size: cover;
 }
