--- a/public/css/newList.css
+++ b/public/css/newList.css
@@ -1,6 +1,8 @@
 h1, h2, h3, h4, h5, h6 {
     font-family: 'MedievalSharp', cursive;
-    color: purple;
+    color: goldenrod;
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.954);;
+    
 }
 
 body {
