--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
     {{{ body }}}
   </main>
   <footer>
-
+    <h6>Copyright 2003 Adam Afifi, Doug Gouthro, Evan Vandenberg, Lindsay Shank-Kirchner </h6>
   </footer>
 
   {{#if user}}
